# inventario_wx

./: CMakeLists.txt  README.md
src/: database.cpp  inventario.cpp  main.cpp  mainwindow.cpp  ordenador.cpp
src/headers/: database.h  inventario.h  mainwindow.h  ordenador.h
